practice day2/pod-firefox.yml
apiVersion: v1 
kind: Pod
metadata:
  name: fire-foxpod
  namespace: priyanshi-ns
spec:
  containers:
  - image: linuxserver/firefox
    name: firefox
    ports: 
    - containerPort: 3000
