practice day2/pod-nginx.yml
apiVersion: v1 
kind: Pod
metadata:
  name: nginx-pod
  namespace: priyanshi-ns
  labels:
    coummunication: stop
spec:
  containers:
  - image: nginx
    name: nginx-container
    ports: 
    - containerPort: 80
