practice day2/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy
  namespace: priyanshi-ns
spec:
  podSelector:
    matchLabels:
      coummunication: stop
